# TaskCanvas

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: inspect-db.js  make-source-icon.js
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: attachments.rs  backup.rs  board.rs  db.rs  lib.rs  main.rs  models.rs  tests.rs  todos.rs
src/components/: CanvasView.tsx  Composer.tsx  ConfirmDialog.tsx  EditableInput.tsx  EditableTextarea.tsx  EmptyState.tsx  Icon.tsx  Inspector.tsx  ListView.tsx  SearchToolbar.tsx  Sidebar.tsx  TipsCard.tsx  Toast.tsx  Topbar.tsx
src/hooks/: useCanvasPanZoom.ts  useConfirm.ts  useToast.ts
src/lib/: api.ts  dates.ts  files.ts  types.ts
src/test/: setup.ts
