[package]
name = "task-canvas"
version = "0.1.0"
description = "Local-first visual todo app with image paste/drop and canvas layout"
authors = ["TaskCanvas"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "task_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[profile.release]
codegen-units = 1
